--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello_cargo"
+name = "rust-projects"
 version = "0.1.0"
-authors = ["tosini <marco.tosini@bitrock.com>"]
+authors = ["Marco Tosini <mark.tosini@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
