--- a/redis-cli/Cargo.toml
+++ b/redis-cli/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.5", features = ["full"] }
+
+[dev-dependencies]
+tokio-test = "*"
